--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ html,body{
     font-weight: 800;
     margin-bottom:40px;
     font-size: 14px;
+    border-color:#000000;
     
 }
 
@@ -226,6 +227,7 @@ margin-bottom: 50px;
     font-size: 14px;
     width:160px;
     height:38px;
+    border-color:#000000;
 }
 .illustration_3{
     width:450px;
@@ -246,6 +248,7 @@ margin-bottom: 50px;
     font-weight: 800;
     margin-bottom:20px;
     margin-top:100px;
+    border-color:#000000;
 }
 .pricing_info{
     font-size:18px;
@@ -267,7 +270,7 @@ margin-bottom: 50px;
 }
 .plan_box{
     border:1px solid #151515;
-    width:400px;
+    width:436px;
     height:644px;
     display: flex;
     flex-direction:column;
@@ -278,6 +281,7 @@ margin-bottom: 50px;
 }
 .plans_heading{
     font-size:80px;
+    margin-top:30px;
    
 }
 sub,sup{
@@ -286,21 +290,181 @@ sub,sup{
 }
 .plans_info{
     font-size:20px;
-    margin-bottom:100px;
+    margin-top:20px;
+    margin-bottom:70px;
  
 
 }
 .plan_box ul{
     list-style-type:  square;
+  
+}
+.plan_box ul::marker{
+    font-size:250px;
 }
 .plan_box ul li{
     font-size:18px;
-    line-height: 28px;
+    margin-top:24px;
+    padding-left: 10px;
+    
 }
 
 .plan_box button{
     width:356px;
     height:52px;
     font-size:18px;
+   margin-top:90px;
+   font-family: "Neue Machina";
+  background-color: #151515;
+  color:#FFFFFF;
+ border:1px solid #151515;
+ 
 
+}
+ #plan_49{
+    margin-top:183px;
+}
+#plan_99{
+    background-color:#151515;
+    color:#f0f0f0;
+}
+#plan_299{
+    background-color: #FFFFFF;
+    border:none;
+}
+#plan_99 button{
+    background-color: #FFFFFF;
+    color: #151515;
+}
+.questions_box{
+    display: flex;
+    justify-content: center;
+    margin-top:170px;
+    column-gap:140px;
+    margin-bottom: 150px;
+
+}
+.questions_box button{
+     width:79px;
+     height:38px;
+     margin-bottom: 30px;
+     font-weight:800;
+     border-color:#000000;
+
+}
+.que_heading{
+font-size:60px;
+letter-spacing: -3px;
+margin-bottom:30px;
+
+}
+.que_intro{
+    font-size:18px;
+    line-height: 26px;
+    margin-bottom: 40px;
+   
+}
+.que{
+    font-size:20px;
+    font-weight: 800;
+    line-height:28px;
+ display: flex;
+ column-gap: 30px;
+ margin-bottom: 20px;
+ 
+
+  
+ 
+    
+}
+.que p{
+    width:500px;
+   
+}
+
+.ans{
+    margin-bottom:15px;
+    
+}
+hr{
+    color:red;
+}
+.question_img{
+    width:600px;
+    height:620px;
+}
+.footer{
+    background-color:#151515;
+    width:100%;
+    height:560px;
+    color:#f0f0f0;
+    
+    display: flex;
+    flex-direction:column;
+    row-gap:150px;
+    margin-bottom: 330px;
+
+}
+.footer_content{
+    
+   
+    display: flex;
+    justify-content:center;
+    column-gap: 50px;
+   padding-top:60px;
+}
+.footer_content ul{
+    list-style-type: none;
+   
+
+}
+.footer_content ul li{
+    font-size:18px;
+padding-top:20px;
+}
+.logowhite{
+    width:52px;
+    height:52px;
+    margin-bottom:20px;
+}
+.footer_content p{
+    font-size:52px;
+    margin-bottom:30px;
+  
+}
+.footer_email{
+    width:361px;
+    height:52px;
+    border:1px solid #FFFFFF;
+    font-size: 18px;
+    padding-left:20px;
+}
+.footer_email_submit{
+    width:123px;
+    height:52px;
+    background-color: #151515;
+    border:1px solid #FFFFFF;
+    color:#FFFFFF;
+    font-size:18px;
+    
+
+}
+.email_content{
+    margin-right:120px;
+}
+
+.socials{
+    display: flex;
+    justify-content:center;
+    column-gap: 250px;
+
+}
+.socials img{
+    width:60px;
+    height:60px;
+}
+.socials p{
+    font-size:18px;
+    margin-top:20px;
+    margin-right:330px;
 }
