--- a/css/style.css
+++ b/css/style.css
@@ -379,7 +379,7 @@ margin-bottom:30px;
     font-size:20px;
     font-weight: 800;
     line-height:28px;
- display: flex;
+
  column-gap: 30px;
  margin-bottom: 20px;
  
@@ -395,7 +395,7 @@ margin-bottom:30px;
 
 .ans{
     margin-bottom:15px;
-    
+font-weight:300;
 }
 hr{
     color:red;
@@ -403,6 +403,7 @@ hr{
 .question_img{
     width:600px;
     height:620px;
+   
 }
 .footer{
     background-color:#151515;
